--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,13 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": ".",
+    "paths": {
+      "@mui/styled-engine": ["node_modules/@mui/styled-engine/index.js"]
+    }
   },
   "include": [
-    "src"
+    "src/**/*"
   ]
 }
