--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,10 +19,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": ".",
-    "paths": {
-      "@mui/styled-engine": ["node_modules/@mui/styled-engine/index.js"]
-    }
+    "baseUrl": "."
   },
   "include": [
     "src/**/*"
